Changelog
=========

[1.0.4] - Unreleased
--------------------

Fixes

- Fix notes not resizing correctly when a file is opened from the command-line on some systems.


[1.0.3] - January 2022
----------------------

Added

- Split lines to cards context menu option for cards
- Open folder in file manager button in recent items menu

Changes

- New colourful icon for removing recent item from menu
- About dialog font tweaks and Icons8 link clickable
- Card font not forced to small size anymore
- Automatically add .kanban extension when saving files and filter in open & save dialogs


[1.0.2] - December 2021
-----------------------

Changes

- Lists and board now scrolls to ensure newly added and moved cards/lists are in view
- List title is selected and focussed when new list is added
- Pasted cards are inserted after currently selected
- Add stretch in kanban board so lists are aligned to left when window isn't full yet
- Disable list move/delete buttons if no list is selected

Added

- Ctrl+Enter from a card adds a new card
- Lists are now automatically selected when title, card or list area is clicked


[1.0.1] - December 2021
-----------------------

Fixes

- Double context menu on Linux
- Card style/border now flat and boxy
- Card height fudge recipe improved


[1.0.0] - Some time ago
-----------------------

Added

- Kanbanapp
